# YuGiOh-Cards-Maker

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Program.cs  README.md  YuGiOh-Cards-Maker.csproj  YuGiOh-Cards-Maker.sh  YuGiOh-Cards-Maker.sln  entrypoint.sh  main.py  process_yugioh_cards.py  pyproject.toml  requirements.txt  update_banlist.py
.github/workflows/: docker-build.yml  generate-cards.yml  process-and-release-cards.yml  release.yml
cfg/: link.json  monster.json  pendulum.json  spell.json  token.json  trap.json
cfg.example/: link.json  monster.json  pendulum.json  spell.json  token.json  trap.json
dev/: config.json  debug.txt  lines.txt
res/: other.json  token.json  typeline.conf
script/: compare_debug_figure.sh  download_cards.sh  download_resources.sh  extract_all_ids.sh  extract_ids.sh  find_unofficial_cards.sh  list_ref_images.sh  process_yugioh_cards.sh
src/: StringNumericConverter.cs  __init__.py  appLogger.cs  card.cs  cardGenerator.cs  cardgenerator.cs  stringNumericConverter.cs
src/core/: __init__.py  card_generator.py  card_processor.py
src/util/: __init__.py  logger.py
