[project]
name = "yugioh-cards-maker"
version = "1.0.0"
description = "A tool to create Yu-Gi-Oh! cards easily. However, it is not a DIY tool and would not be that."
authors = [
    { name = "Arshtyi", email = "arshtyi_trantor@outlook.com" }
]
license = "LICENSE" 
project-url = [
    { type = "repository", url = "https://github.com/Arshtyi/YuGiOh-Cards-Maker" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0.0",
    "requests>=2.30.0",
]